--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -2,11 +2,14 @@
   homebrew:
     name: nginx
     state: present
-    upgrade: true
-    
+
 - name: Copy nginx.conf
   copy:
     src: nginx.conf
     dest: /usr/local/etc/nginx/nginx.conf
   notify:
   - restart nginx
+
+- name: homebrew | upgrade all
+  homebrew:
+    upgrade_all: true
