--- a/playbook.yml
+++ b/playbook.yml
@@ -3,6 +3,8 @@
     - include_role: 
         name: homebrew_cask
     - include_role: 
+        name: homebrew
+    - include_role: 
         name: git
     - include_role: 
         name: nginx
