--- a/roles/profile/tasks/main.yml
+++ b/roles/profile/tasks/main.yml
@@ -126,7 +126,7 @@
 
 - osx_defaults:
     domain: com.apple.finder
-    key: AppleShowAllFiles
+    key: AppleShowAllExtensions
     type: bool
     value: true
     state: present
