--- a/playbook.yml
+++ b/playbook.yml
@@ -1,18 +1,20 @@
 - hosts: localhost
   tasks:
     - include_role: 
-        name: homebrew_cask
-    - include_role: 
-        name: homebrew
-    - include_role: 
         name: git
     - include_role: 
         name: mac-settings
     - include_role: 
         name: zsh
+      tags:
+        - zsh
     - include_role: 
         name: terminal-prompt
     - include_role: 
         name: terminal-themes
     - include_role: 
         name: zsh-plugins
+    - include_role: 
+        name: homebrew_cask
+    - include_role: 
+        name: homebrew
