--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -2,56 +2,12 @@
   homebrew:
     name: zsh
     state: present
+  tags:
+    - zsh
 
 - name: zsh | Copy .zshrc
   copy:
     src: .zshrc
     dest: ~/.zshrc
-
-# PLUGINS
-- name: zsh | check zsh-syntax-highlighting
-  stat:
-    path: '~/.zsh_custom/plugins/zsh-syntax-highlighting'
-  register: highlight
-
-- name: zsh | zsh-syntax-highlighting
-  ansible.builtin.shell: 'git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ~/.zsh_custom/plugins/zsh-syntax-highlighting'
-  when: not highlight.stat.exists
-
-- name: zsh | check zsh-autosuggestions
-  stat:
-    path: '~/.zsh_custom/plugins/zsh-autosuggestions'
-  register: autosuggest
-
-- name: zsh | zsh-autosuggestions
-  ansible.builtin.shell: 'git clone https://github.com/zsh-users/zsh-autosuggestions ~/.zsh_custom/plugins/zsh-autosuggestions'
-  when: not autosuggest.stat.exists
-
-- name: zsh | check ohmyzh (I only care about plugins)
-  stat:
-    path: '~/.zsh_custom/plugins/ohmyzsh'
-  register: ohmyzsh
-
-- name: zsh | ohmyzsh (I only care about plugins)
-  ansible.builtin.shell: 'git clone https://github.com/ohmyzsh/ohmyzsh.git ~/.zsh_custom/plugins/ohmyzsh'
-  when: not ohmyzsh.stat.exists
-
-# THEMES
-# Need to manually update mac terminal profile
-- name: zsh | check materialshell
-  stat:
-    path: '~/.zsh_custom/plugins/materialshell'
-  register: materialshell
-
-- name: zsh | materialshell
-  ansible.builtin.shell: 'git clone git@github.com:carloscuesta/materialshell.git ~/.zsh_custom/plugins/materialshell'
-  when: not materialshell.stat.exists
-
-- name: zsh | check dracula
-  stat:
-    path: '~/.zsh_custom/plugins/dracula'
-  register: dracula
-
-- name: zsh | dracula
-  ansible.builtin.shell: 'git clone https://github.com/dracula/terminal-app.git ~/.zsh_custom/plugins/dracula'
-  when: not dracula.stat.exists
+  tags:
+    - zsh
