--- a/playbook.yml
+++ b/playbook.yml
@@ -15,6 +15,8 @@
     - include_role: 
         name: zsh-plugins
     - include_role: 
+        name: vim
+    - include_role: 
         name: homebrew_cask
     - include_role: 
         name: homebrew
