--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -10,3 +10,11 @@
       name: push.default
       scope: global
       value: current
+  - git_config:
+      name: 'url.ssh://git@github.com/.insteadOf'
+      scope: global
+      value: https://github.com/
+  - git_config:
+      name: 'url.ssh://git@ghe.spotify.net/.insteadOf'
+      scope: global
+      value: https://ghe.spotify.net/
