--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -5,16 +5,8 @@
   - git_config:
       name: user.email
       scope: global
-      value: connorg@spotify.com
+      value: connor.graham@yum.com
   - git_config:
       name: push.default
       scope: global
       value: current
-  - git_config:
-      name: 'url.ssh://git@github.com/.insteadOf'
-      scope: global
-      value: https://github.com/
-  - git_config:
-      name: 'url.ssh://git@ghe.spotify.net/.insteadOf'
-      scope: global
-      value: https://ghe.spotify.net/
