Convert nvim role to manage entire .config dir

--- a/playbook.yml
+++ b/playbook.yml
@@ -9,7 +9,7 @@
       tags:
         - zsh
     - include_role: 
-        name: vim
+        name: config
     - include_role: 
         name: homebrew_cask
     - include_role: 
