--- a/roles/tmux/files/.tmux.conf
+++ b/roles/tmux/files/.tmux.conf
@@ -17,21 +17,28 @@ set -g mouse on
 set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
 
 # Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
+# CATPPUCCIN
+# set -g @catppuccin_flavor "mocha"
+# set -g @catppuccin_window_status_style "rounded"
+# set -g status-right-length 100
+# set -g status-left-length 100
+# set -g status-left ""
+# set -g status-right ""
+# set -ag status-left "#{E:@catppuccin_status_application}"
+# set -ag status-left "#{E:@catppuccin_status_kube}"
+# set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'jonmosco/kube-tmux'
+# set -g status-interval 2
 
-# run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-#run ~/.config/tmux/plugins/kube-tmux/kube.tmux
+# DRACULA
+set -g @plugin 'dracula/tmux'
+set -g @dracula-plugins "kubernetes-context network-ping cpu-usage ram-usage weather"
+set -g @dracula-show-powerline true
+set -g @dracula-show-flags true
+set -g @dracula-left-icon-padding 1
+set -g @dracula-kubernetes-hide-user true
 
-# Make the status line pretty and add some modules
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right ""
-set -ag status-left "#{E:@catppuccin_status_application}"
-set -ag status-left "#{E:@catppuccin_status_kube}"
-set -g @plugin 'catppuccin/tmux'
+
+# Tmux Plugin Manager. Run <leader> + I to install plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'jonmosco/kube-tmux'
-set -g status-interval 2
 run '~/.tmux/plugins/tpm/tpm'
