--- a/roles/tmux/files/.tmux.conf
+++ b/roles/tmux/files/.tmux.conf
@@ -32,7 +32,7 @@ set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
 
 # DRACULA
 set -g @plugin 'dracula/tmux'
-set -g @dracula-plugins "kubernetes-context weather"
+set -g @dracula-plugins "time kubernetes-context"
 set -g @dracula-show-powerline true
 set -g @dracula-show-flags true
 set -g @dracula-left-icon-padding 1
